--- a/package.json
+++ b/package.json
@@ -13,5 +13,11 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "sqlite3": "^5.1.6"
+  },
+  "dependencies": {
+    "pg": "^8.10.0"
+  }
 }
